2005-10-14  Matthew Gregan  <kinetik@orcon.net.nz>

	* commands.cc (message_width): Refactor into display_width() and
	remove message_width().
	* transforms.{cc,hh} (display_width): Rename length() to
	display_width() and use the code from message_width().
	* ui.cc, commands.cc: Change calls to length() to display_width().
	* netsync.cc: Remove length() calls, test for string emptiness
	instead.

2005-10-13  Emile Snyder <emile@alumni.reed.edu>

	* commands.cc (CMD(revert)): use --missing for revert a'la drop.
	* monotone.texi: document it.
	* tests/t_revert_restrict.at: test it.
	
2005-10-13  Emile Snyder <emile@alumni.reed.edu>

	* app_state.{cc,hh}: new missing class member for --missing flag.
	* commands.cc (CMD(drop), ls_missing, find_missing): use new
	--missing flag to drop any files already deleted in the working copy.
	* monotone.cc (coptions, cpp_main): add the --missing flag handling.
	* options.hh: add OPT_MISSING.
	* monotone.texi: document it.
	* tests/t_drop_missing.at: test it.
	
2005-10-13  Emile Snyder <emile@alumni.reed.edu>

	* database.cc (complete): implementation for h:branch selector to
	find heads of a branch.
	* selectors.{cc,hh}: add sel_head with selector character 'h'.
	* monotone.texi: document it.
	
2005-10-13  Matt Johnston  <matt@ucc.asn.au>

	* botan/mem_pool.cpp: fix bug preventing remove_empty_buffers()
	from being called, gives significant improvements for long-running
	processes.

2005-10-12  Emile Snyder <emile@alumni.reed.edu>

	* monotone.texi: add njs's lucid definition of what the disapprove
	actually means in terms of the revision graph to it's section in
	the documentation.
	
2005-10-12  Matt Johnston  <matt@ucc.asn.au>

	* monotone.cc: return with exit code of 2 on usage output
	* testsuite.at: turn "cat_foo" into "automate get_foo"
	* tests/t_empty_env.at, tests/t_null.at, tests/t_at_sign.at,
	tests/t_unreadable_db.at, tests/t_cmdline_options.at: expect 2 exit code